--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(ListTest ListTest.cpp)
 add_executable(GraphTest GraphTest.cpp)
 add_executable(DiGraphTest DiGraphTest.cpp)
 add_executable(EdgeWeightedGraphTest EdgeWeightedGraphTest.cpp)
+add_executable(EdgeWeightedDigraphTest EdgeWeightedDigraphTest.cpp)
