--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,10 +1,12 @@
+add_executable(StackTest StackTest.cpp)
+target_link_libraries(StackTest ${GTEST_BOTH_LIBRARIES})
+gtest_add_tests(TARGET StackTest)
+
+
 add_executable(BSTTest BSTTest.cpp)
-# target_link_libraries(MyTest ${GTEST_BOTH_LIBRARIES})
-# gtest_add_tests(TARGET MyTest)
-
-
 add_executable(ListTest ListTest.cpp)
 add_executable(GraphTest GraphTest.cpp)
 add_executable(DiGraphTest DiGraphTest.cpp)
 add_executable(EdgeWeightedGraphTest EdgeWeightedGraphTest.cpp)
 add_executable(EdgeWeightedDigraphTest EdgeWeightedDigraphTest.cpp)
+add_executable(Recursive2Loop Recursive2Loop.cpp)
