--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(Algorithms)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_C_STANDARD 11)
 
+find_package(GTest  REQUIRED)
+include(GoogleTest)
+include_directories(${GTEST_INCLUDE_DIR})
+
 include_directories("${PROJECT_SOURCE_DIR}/Algorithms")
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/Test")
