Tree  build and traversal with three order

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(DiGraphTest DiGraphTest.cpp)
 add_executable(EdgeWeightedGraphTest EdgeWeightedGraphTest.cpp)
 add_executable(EdgeWeightedDigraphTest EdgeWeightedDigraphTest.cpp)
 add_executable(Recursive2Loop Recursive2Loop.cpp)
+add_executable(BTreeTest BTreeTest.cpp)
